# VastStreamX-Samples

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile  README.md  requirements.txt
samples/: CMakeLists.txt
samples/card_info/: CMakeLists.txt  README.md  card_info.cpp  card_info.py
samples/classification/: CMakeLists.txt
samples/classification/mobilevit/: CMakeLists.txt  README.md  README_swin.md  mobilevit.cpp  mobilevit.py  mobilevit_prof.cpp  mobilevit_prof.py
samples/classification/resnet/: CMakeLists.txt  README.md  classification.cpp  classification.py  cls_prof.cpp  cls_prof.py
samples/classification/vit/: CMakeLists.txt  README.md  vit.cpp  vit.py  vit_prof.cpp  vit_prof.py
samples/clip/: CMakeLists.txt  README.md  clip_image_prof.cpp  clip_image_prof.py  clip_sample.cpp  clip_sample.py  clip_text_prof.cpp  clip_text_prof.py  make_input_npz.py  test_label.txt
samples/datatype/: CMakeLists.txt  README.md  image.cpp  image.py  tensor.cpp  tensor.py
samples/decode_and_detection/: CMakeLists.txt  README.md  decode_and_detection.cpp  decode_and_detection.py  yolov5_det.h
samples/decode_and_pose/: CMakeLists.txt  README.md  cnpy.cpp  cnpy.h  decode_and_pose.cpp  libtorch_postprocess.cpp  libtorch_postprocess.h  yolov8_pose.h
samples/decode_detection_encode/: CMakeLists.txt  README.md  decode_detection_encode.cpp  decode_detection_encode.py
samples/detection/: CMakeLists.txt
samples/detection/alpr_yolov10n/: CMakeLists.txt  README.md  alpr.cpp  run_single.py
samples/detection/det_yolo/: CMakeLists.txt  README.md  det_prof.cpp  det_prof.py  detection.cpp  detection.py
samples/detection/detr/: CMakeLists.txt  README.md  detr.cpp  detr.py  detr_prof.cpp  detr_prof.py
samples/detection/grounding_dino/: CMakeLists.txt  README.md  generate_tokens_for_cpp.py  grounding_dino.cpp  grounding_dino.py  grounding_dino_image_enc_prof.cpp  grounding_dino_image_enc_prof.py  grounding_dino_text_enc_prof.cpp  grounding_dino_text_enc_prof.py
samples/detection/rtdetr/: CMakeLists.txt  README.md  rtdetr.cpp  rtdetr.py  rtdetr_prof.cpp
samples/detection3d/: CMakeLists.txt
samples/detection3d/center_point/: CMakeLists.txt  README.md  center_point.cpp  center_point.py  center_point_prof.cpp  center_point_prof.py
samples/detection3d/point_pillar/: CMakeLists.txt  README.md  point_pillar.cpp  point_pillar.py  point_pillar_prof.cpp  point_pillar_prof.py
samples/dinov2/: CMakeLists.txt  README.md  dinov2.cpp  dinov2.py  dinov2_prof.cpp  dinov2_prof.py  read_pickle.hpp  read_pickle.py  utils.hpp  utils.py
samples/dynamic_model/: CMakeLists.txt  README.md  dynamic_yolo.cpp  dynamic_yolo.py  dynamic_yolo_prof.cpp  dynamic_yolo_prof.py
samples/efficient_ads/: efficient_ads.py  efficient_ads_prof.py
samples/elic/elic/: README.md  dynamic_elic_compress.py  dynamic_elic_decompress.py  dynamic_elic_inference.py  elic_compress.py  elic_decompress.py  elic_inference.py  elic_no_entropy_inference.py  elic_noentropy_prof.py
samples/face_alignment/: CMakeLists.txt
samples/face_alignment/hih/: CMakeLists.txt  README.md  hih.cpp  hih.py  hih_prof.cpp  hih_prof.py
samples/face_detection/: CMakeLists.txt  README.md  face_detection.cpp  face_detection.py  face_detection_prof.cpp  face_detection_prof.py
samples/face_enhancement/: CMakeLists.txt  README.md  face_enhancement.cpp  face_enhancement.py  face_enhancement_prof.cpp  face_enhancement_prof.py
samples/face_recognition/: CMakeLists.txt  README.md  face_recognition.cpp  face_recognition.py  face_recognition_prof.cpp  face_recognition_prof.py
samples/image_process/: CMakeLists.txt  README.md  image_process.cpp  image_process.py
samples/jpeg_decode/: CMakeLists.txt  README.md  jpeg_decode.cpp  jpeg_decode.py  jpeg_decode_prof.cpp  jpeg_decode_prof.py
samples/jpeg_encode/: CMakeLists.txt  README.md  jpeg_encode.cpp  jpeg_encode.py  jpeg_encode_prof.cpp  jpeg_encode_prof.py
samples/mlic++/mlic/: README.md  mlic_base.py  mlic_inference.py  requirements.txt
samples/mlic++/utils/: ckbd.py  fun.py  vastai.py
samples/multi_object_tracking/: CMakeLists.txt  README.md  bytetracker.cpp  bytetracker.py  bytetracker_prof.cpp  bytetracker_prof.py  precision_cpp.sh  precision_py.sh
samples/ocr/: CMakeLists.txt  README.md  crnn.cpp  crnn.py  crnn_prof.cpp  crnn_prof.py
samples/ocr_e2e/: CMakeLists.txt  README.md  ocr_e2e.cpp  ocr_e2e.hpp  ocr_e2e.py  ocr_e2e_async.cpp  ocr_e2e_async.hpp  ocr_e2e_async.py  ocr_e2e_async_cls.py  ocr_e2e_multi_thread.hpp  text_cls_prof.cpp  text_cls_prof.py  text_det.cpp  text_det.py  text_det_prof.cpp  text_det_prof.py  text_rec.cpp  text_rec.py  text_rec_prof.cpp  text_rec_prof.py
samples/run_stream_async/: CMakeLists.txt  README.md  run_stream_async.cpp  run_stream_async.py  run_stream_async_prof.cpp  run_stream_async_prof.py
samples/salient_object_detection/: CMakeLists.txt
samples/segmentation/: CMakeLists.txt
samples/segmentation/fcn/: fcn.cpp  (+5 more)
samples/siglip/: CMakeLists.txt  README.md  siglip_image_onnx.py  siglip_image_prof.py  siglip_sample.py
samples/super_resolution/: CMakeLists.txt  README.md  sr_prof.cpp  sr_prof.py  super_resolution.cpp  super_resolution.py
samples/super_resolution_e2e/: CMakeLists.txt  README.md  sr_e2e_prof.cpp  sr_e2e_prof.py  super_resolution_e2e.cpp  super_resolution_e2e.py
samples/text_detection/: CMakeLists.txt  README.md  dbnet.cpp  dbnet.py  dbnet_prof.cpp  dbnet_prof.py
samples/vdsp_op/: CMakeLists.txt  README.md
samples/video_capture/: CMakeLists.txt  README.md  video_capture.cpp  video_capture.py
samples/video_decode/: CMakeLists.txt  README.md  video_decode.cpp  video_decode.py  video_decode_prof.cpp  video_decode_prof.py
samples/video_encode/: CMakeLists.txt  README.md  video_encode.cpp  video_encode.py  video_encode_prof.cpp  video_encode_prof.py
samples/video_writer/: CMakeLists.txt  README.md  video_writer.cpp  video_writer.py
samples/yolo_world/: CMakeLists.txt  README.md  yolo_world.cpp  yolo_world.py  yolo_world_image_prof.cpp  yolo_world_image_prof.py  yolo_world_text_prof.cpp  yolo_world_text_prof.py
(+404 files in other folders)
