add_subdirectory(classification)
add_subdirectory(detection)
add_subdirectory(ocr)
add_subdirectory(text_detection)
add_subdirectory(segmentation)
add_subdirectory(face_alignment)
add_subdirectory(face_detection)
add_subdirectory(face_enhancement)
add_subdirectory(face_recognition)
add_subdirectory(datatype)
add_subdirectory(vdsp_op)
add_subdirectory(run_stream_async)
add_subdirectory(dynamic_model)
add_subdirectory(image_process)
add_subdirectory(super_resolution)
add_subdirectory(multi_object_tracking)
add_subdirectory(detection3d)
add_subdirectory(clip)
add_subdirectory(salient_object_detection)
add_subdirectory(jpeg_decode)
add_subdirectory(jpeg_encode)
add_subdirectory(video_decode)
add_subdirectory(video_encode)
add_subdirectory(video_writer)
add_subdirectory(yolo_world)
add_subdirectory(dinov2)
add_subdirectory(ocr_e2e)
add_subdirectory(card_info)
add_subdirectory(decode_and_detection)
add_subdirectory(decode_detection_encode)
add_subdirectory(video_capture)
# add_subdirectory(pose)
add_subdirectory(decode_and_pose)
add_subdirectory(super_resolution_e2e)
